# rustkpi

calculator_lab2/: Cargo.toml
calculator_lab2/src/: main.rs
calculator_lab2/static/: index.html
messenger_lab4/: .env  Cargo.toml  app.db
messenger_lab4/src/: main.rs  models.rs  routes.rs  websocket.rs
messenger_lab4/static/: index.html  login.html  register.html
todo_lab3/: Cargo.toml
todo_lab3/data/: tasks.json
todo_lab3/src/: main.rs  routes.rs
todo_lab3/static/: app.js  index.html
