[package]
name = "rust_messanger"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
dotenv = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.38"
env_logger = "0.11.5"
serde_json = "1.0.133"
